Name:           memcache-conduit
Version:        0.0.1
Description:    Memcached Protocol Conduit
License:        OtherLicense
Author:         Kiyoshi Ikehara
Maintainer:     Kiyoshi Ikehara
Build-Type:     Simple
Cabal-Version:  >=1.8

Library
  Ghc-Options:     -O2 -Wall
  Build-Depends:   base >=4 && <5
                 , bytestring
                 , network >= 2.3.2
                 , split
                 , mtl
                 , memcache-haskell
                 , conduit
                 , attoparsec
                 , attoparsec-binary
                 , attoparsec-conduit
  Hs-source-dirs:  src
  Exposed-modules: Data.Conduit.Memcache
  Extensions:      DeriveDataTypeable


Executable hemcached
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Extra-Libraries: 
  Build-Depends:   base >= 4 && < 5, bytestring >= 0.9, stm >= 2.4, containers
                 , transformers
                 , resourcet
                 , mtl
                 , hashtables
                 , conduit
                 , network-conduit
                 , memcache-haskell
                 , memcache-conduit
  Hs-source-dirs:  main
  Main-is:         hemcached.hs
  Extensions:      DeriveDataTypeable
