Name:           memcache-conduit
Version:        0.0.3
License:        OtherLicense
Author:         Kiyoshi Ikehara
Maintainer:     Kiyoshi Ikehara
Copyright:      (c) 2013 GREE, Inc.
Build-Type:     Simple
Cabal-Version:  >=1.8
Description:    This package provides conduit functions for memcache protocol.

Library
  Ghc-Options:     -O2 -Wall
  Build-Depends:   base               >=4 && <5
                 , bytestring
                 , network            >= 2.3.2
                 , split
                 , mtl
                 , conduit
                 , attoparsec
                 , attoparsec-binary
                 , attoparsec-conduit
                 , memcache-haskell   >= 0.0.6
  Hs-source-dirs:  src
  Exposed-modules: Data.Conduit.Memcache
  Extensions:      DeriveDataTypeable


Executable memcache-sample-hemcached
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Extra-Libraries: 
  Build-Depends:   base       >= 4 && < 5
                 , bytestring >= 0.9
                 , stm        >= 2.4
                 , containers
                 , transformers
                 , resourcet
                 , mtl
                 , hashtables
                 , conduit
                 , network-conduit
                 , memcache-haskell >= 0.0.6
                 , memcache-conduit
  Hs-source-dirs:  sample
  Main-is:         hemcached.hs
  Extensions:      DeriveDataTypeable

Executable memcache-sample-proxy
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Extra-Libraries: 
  Build-Depends:   base       >= 4 && < 5
                 , bytestring >= 0.9
                 , stm        >= 2.4
                 , containers
                 , transformers
                 , resourcet
                 , mtl
                 , network
                 , conduit
                 , monad-control
                 , network-conduit
                 , memcache-haskell
                 , memcache-conduit
  Hs-source-dirs:  sample
  Main-is:         proxy.hs
  Extensions:      DeriveDataTypeable
