Name:           memcache-haskell
Version:        0.0.1
Description:    Memcached
License:        OtherLicense
Author:         Kiyoshi Ikehara
Maintainer:     Kiyoshi Ikehara
Copyright:      (c) 2013 GREE, Inc.
Build-Type:     Simple
Cabal-Version:  >=1.8

Library
  Ghc-Options:     -O2 -Wall
  Build-Depends:   base >=4 && <5
                 , bytestring
                 , network >= 2.3.2
                 , attoparsec
                 , transformers
                 , split
                 , cereal
                 , hashable < 1.2
  Hs-source-dirs:  src
  Exposed-modules: Network.Memcache
                 , Network.Memcache.Response
                 , Network.Memcache.Op
                 , Network.Memcache.Message
                 , Network.Memcache.Client
                 , Network.Memcache.Stats
                 , Network.Memcache.Util
  Extensions:      DeriveDataTypeable

Test-Suite test-memcache
  Ghc-Options:     -O2
  Build-depends:   base
                 , bytestring
                 , network >= 2.3.2
                 , split
                 , QuickCheck == 2.5.1.1
                 , HUnit
                 , test-framework
                 , test-framework-th
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , memcache-haskell
  Type:            exitcode-stdio-1.0
  Hs-source-dirs:  test
  Main-is:         test-memcache.hs
