Name:           memcache-haskell
Version:        0.0.7
Description:    Memcached
License:        OtherLicense
Author:         Kiyoshi Ikehara
Maintainer:     Kiyoshi Ikehara
Copyright:      (c) 2013 GREE, Inc.
Build-Type:     Simple
Cabal-Version:  >=1.8

Library
  Ghc-Options:     -O2 -Wall
  Build-Depends:   base         >=4 && <5
                 , bytestring
                 , network      >= 2.3.2
                 , attoparsec
                 , transformers
                 , split
                 , hashable     < 1.2
  Hs-source-dirs:  src
  Exposed-modules: Network.Memcache
                 , Network.Memcache.Response
                 , Network.Memcache.Op
                 , Network.Memcache.Class
                 , Network.Memcache.Client
                 , Network.Memcache.Stats
                 , Network.Memcache.Types
                 , Network.Memcache.IO
  Extensions:      DeriveDataTypeable

Executable memcache-sample-client
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Extra-Libraries: 
  Build-Depends:   base       >= 4 && < 5
                 , bytestring >= 0.9
                 , stm        >= 2.4
                 , containers
                 , transformers
                 , resourcet
                 , mtl
                 , hashtables
                 , network-conduit
                 , memcache-haskell
  Hs-source-dirs:  sample
  Main-is:         sample-client.hs
  Extensions:      DeriveDataTypeable

Executable memcache-sample-retrieval
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Extra-Libraries: 
  Build-Depends:   base       >= 4 && < 5
                 , bytestring >= 0.9
                 , stm        >= 2.4
                 , containers
                 , transformers
                 , resourcet
                 , mtl
                 , hashtables
                 , network-conduit
                 , memcache-haskell
  Hs-source-dirs:  sample
  Main-is:         sample-retrieval.hs
  Extensions:      DeriveDataTypeable

Test-Suite test-memcache
  Ghc-Options:     -threaded -O2 -Wall
  Build-depends:   base
                 , bytestring
                 , network >= 2.3.2
                 , split
                 , QuickCheck == 2.5.1.1
                 , HUnit
                 , test-framework
                 , test-framework-th
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , memcache-haskell
  Type:            exitcode-stdio-1.0
  Hs-source-dirs:  test
  Main-is:         test-memcache.hs
